--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
+  "name": "Mu Blog",
+  "short_name": "Mu Blog",
   "description": "A personal blog by engineer",
   "icons": [{
     "src": "icons/pwa_icon_128.png",
